deleting a session done
